src/test/deca/context/invalid/fonction/protected-violation.deca
// Programme testant si Protected marche bien

class A {
    protected int i;
}

{
    A a = new A();
    print(a.i);
}